--- a/Extra.html
+++ b/Extra.html
@@ -1,18 +1,30 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Extra opdrachten</h1>
 
     <p>Voeg een readme toe en probeer enkele zaken uit met de markdown syntax.</p>
     <p>Zoek nog een leuk weetje over github.</p>
 
+    <p>Installeer github desktop en probeer een van de individuele opdrachten hiermee te maken.</p>
+
+    <p>Maak een nieuwe branch aan, maak enkele aanpassingen en commit. Maak hierna een nieuwe branch aan van de main branch. Merk op dat de aanpassingen van de eerste branch niet bij de tweede zijn aangezien er geen pull request is gemaakt.</p>
+
+    <p>Maak een branch aan. Hernoem deze branch.</p>
+    <p>Maak een branch aan. Maak een nieuwe branch vertrekkende van deze branch. Maak een pull request en merge de twee branches</p>
+
+    <p>Maak aanpassingen aan deze file. Verwerp deze wijzigingen met github</p>
+    <p>Bekijk veranderde bestanden met git status.</p>
     <p></p>
 </body>
+
 </html>
