spelfout en textbox

--- a/evaluatie2.html
+++ b/evaluatie2.html
@@ -12,17 +12,17 @@
 </head>
 
 <body>
-<!-- Header Showcase -->
-<header id="showcase" class="grid">
-    <div class="bg-image"></div>
-    <div class="content-wrap">
-        <h1>Evaluatie</h1>
-    </div>
-</header>
+    <!-- Header Showcase -->
+    <header id="showcase" class="grid">
+        <div class="bg-image"></div>
+        <div class="content-wrap">
+            <h1>Evaluatie</h1>
+        </div>
+    </header>
 
 
     <!-- Section B -->
-    <p>Vul die formulier in, bij radio button zet je bij je keuze checked. Bij tekstvelden zet je het antwoord in de p-tag</p>
+    <p>Vul dit formulier in, bij radio button zet je bij je keuze checked. Bij tekstvelden zet je het antwoord in de p-tag</p>
 
     <p>Voorbeeld:</p>
     <input type="radio" id="voorbeeld1">
@@ -32,12 +32,10 @@
     <input type="radio" id="voorbeeld3">
     <label for="voorbeeld3">Nee</label>
     <br>
-    <label for="voorbeeld4">Voorbeeld</label>
-    <input type="text" id="voorbeeld4" value="Voorbeeld antwoord">
     <hr>
     <form action="">
-        <label for="onderwerp">Onderwerp:</label>
-        <input type="text" id="onderwerp">
+        <p>Onderwerp:</p>
+        <p class="answer"></p>
 
         <p>Was de aangeboden informatie duidelijk?:</p>
         <input type="radio" id="duidelijk1">
@@ -103,7 +101,7 @@
         <input type="radio" id="moeilijk3">
         <label for="moeilijk3">Te eenvoudig</label>
 
-        <p>Hoe was het tempo van de training?  :</p>
+        <p>Hoe was het tempo van de training? :</p>
         <input type="radio" id="tempo1">
         <label for="tempo1">Goed</label>
         <input type="radio" id="tempo2">
@@ -135,12 +133,12 @@
         <p class="answer"></p>
     </form>
 
-</main>
+    </main>
 
-<!-- Footer -->
-<footer id="main-footer" class="grid">
-    <div>Github 101</div>
-</footer>
+    <!-- Footer -->
+    <footer id="main-footer" class="grid">
+        <div>Github 101</div>
+    </footer>
 
 </body>
 
